# Kylebot_LLM

./: .gitignore  README.md  gpt2_kylebot.ipynb  kylebot.ipynb  kylebot_fixed.py  kylebot_gradio.py  llm.ipynb  main.py  model_utils.py  pyproject.toml  requirements.txt  sandbox.py  start_kylebot.sh  tasks.json
.gradio/flagged/: dataset1.csv
