[tool.poetry]
name = "kylebot"
version = "0.1.0"
description = "Personal assistant project for learning"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
sentencepiece = "^0.2.0"
transformers = "^4.53.1"
torch = "^2.7.1"
datasets = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
